syntax = "proto3";

option java_package = "com.soulfiremc.grpc.generated";
option java_multiple_files = true;

package soulfire.v1;

import "soulfire/common.proto";

message ClientDataRequest {
}

message GlobalPermissionState {
  GlobalPermission global_permission = 1;
  bool granted = 2;
}

message ServerInfo {
  string version = 1;
  string commit_hash = 2;
  string branch_name = 3;
}

message ClientDataResponse {
  string id = 6;
  string username = 1;
  UserRole role = 7;
  string email = 8;
  repeated GlobalPermissionState server_permissions = 2;
  ServerInfo server_info = 11;
}

service ConfigService {
  rpc getClientData(ClientDataRequest) returns (ClientDataResponse);
}
